Bugfixes to animation-related items

--- a/Notebooks/Main_animation.ipynb
+++ b/Notebooks/Main_animation.ipynb
@@ -51,7 +51,7 @@
       "Running the experiment with inputs:\n",
       "\t- n_replications: \t1\n",
       "\t- max_run_length: \t1000\n",
-      "\t- n_visitors: \t\t3\n",
+      "\t- n_visitors: \t\t50\n",
       "\t- female_ratio: \t0.5\n",
       "\t- adult_ratio: \t\t0.5\n",
       "\t- familiarity: \t\t0.1\n",
@@ -63,7 +63,68 @@
       "Interface starting at http://127.0.0.1:8521\n",
       "Socket opened!\n",
       "{\"type\":\"reset\"}\n",
-      "{\"type\":\"get_step\",\"step\":1}\n"
+      "{\"type\":\"get_step\",\"step\":1}\n",
+      "Init done, simulation start\n",
+      "{\"type\":\"get_step\",\"step\":2}\n",
+      "{\"type\":\"get_step\",\"step\":3}\n",
+      "{\"type\":\"get_step\",\"step\":4}\n",
+      "{\"type\":\"get_step\",\"step\":5}\n",
+      "{\"type\":\"get_step\",\"step\":6}\n",
+      "{\"type\":\"get_step\",\"step\":7}\n",
+      "{\"type\":\"get_step\",\"step\":8}\n",
+      "{\"type\":\"get_step\",\"step\":9}\n",
+      "{\"type\":\"get_step\",\"step\":10}\n",
+      "{\"type\":\"get_step\",\"step\":11}\n",
+      "{\"type\":\"get_step\",\"step\":12}\n",
+      "{\"type\":\"get_step\",\"step\":13}\n",
+      "{\"type\":\"get_step\",\"step\":14}\n",
+      "{\"type\":\"get_step\",\"step\":15}\n",
+      "{\"type\":\"get_step\",\"step\":16}\n",
+      "{\"type\":\"get_step\",\"step\":17}\n",
+      "{\"type\":\"get_step\",\"step\":18}\n",
+      "{\"type\":\"get_step\",\"step\":19}\n",
+      "{\"type\":\"get_step\",\"step\":20}\n",
+      "{\"type\":\"get_step\",\"step\":21}\n",
+      "{\"type\":\"get_step\",\"step\":22}\n",
+      "{\"type\":\"get_step\",\"step\":23}\n",
+      "{\"type\":\"get_step\",\"step\":24}\n",
+      "{\"type\":\"get_step\",\"step\":25}\n",
+      "{\"type\":\"get_step\",\"step\":26}\n",
+      "{\"type\":\"get_step\",\"step\":27}\n",
+      "{\"type\":\"get_step\",\"step\":28}\n",
+      "{\"type\":\"get_step\",\"step\":29}\n",
+      "{\"type\":\"get_step\",\"step\":30}\n",
+      "{\"type\":\"get_step\",\"step\":31}\n",
+      "{\"type\":\"get_step\",\"step\":32}\n",
+      "{\"type\":\"get_step\",\"step\":33}\n",
+      "{\"type\":\"get_step\",\"step\":34}\n",
+      "{\"type\":\"get_step\",\"step\":35}\n",
+      "{\"type\":\"get_step\",\"step\":36}\n",
+      "{\"type\":\"get_step\",\"step\":37}\n",
+      "{\"type\":\"get_step\",\"step\":38}\n",
+      "{\"type\":\"get_step\",\"step\":39}\n",
+      "{\"type\":\"get_step\",\"step\":40}\n",
+      "{\"type\":\"get_step\",\"step\":41}\n",
+      "{\"type\":\"get_step\",\"step\":42}\n",
+      "{\"type\":\"get_step\",\"step\":43}\n",
+      "{\"type\":\"get_step\",\"step\":44}\n",
+      "{\"type\":\"get_step\",\"step\":45}\n",
+      "{\"type\":\"get_step\",\"step\":46}\n",
+      "{\"type\":\"get_step\",\"step\":47}\n",
+      "{\"type\":\"get_step\",\"step\":48}\n",
+      "{\"type\":\"get_step\",\"step\":49}\n",
+      "{\"type\":\"get_step\",\"step\":50}\n",
+      "{\"type\":\"get_step\",\"step\":51}\n",
+      "{\"type\":\"get_step\",\"step\":52}\n",
+      "{\"type\":\"get_step\",\"step\":53}\n",
+      "{\"type\":\"get_step\",\"step\":54}\n",
+      "{\"type\":\"get_step\",\"step\":55}\n",
+      "{\"type\":\"get_step\",\"step\":56}\n",
+      "{\"type\":\"get_step\",\"step\":57}\n",
+      "{\"type\":\"get_step\",\"step\":58}\n",
+      "{\"type\":\"get_step\",\"step\":59}\n",
+      "{\"type\":\"get_step\",\"step\":60}\n",
+      "{\"type\":\"get_step\",\"step\":61}\n"
      ]
     }
    ],
@@ -71,7 +132,7 @@
     "exp = Experiment()\n",
     "\n",
     "exp.run(model=EvacuationModel, map_img_path='Images/Library_NewPlan2_map.png',\n",
-    "        n_visitors=3, n_officestaff=3, visualize=True, n_replications=1, valid_exits=[ExitType.ABC])\n",
+    "        n_visitors=50, n_officestaff=10, visualize=True, n_replications=1, valid_exits=[ExitType.C])\n",
     "\n"
    ],
    "metadata": {
@@ -90,7 +151,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
