Final cleanup for assignment submission

--- a/Notebooks/Main_animation.ipynb
+++ b/Notebooks/Main_animation.ipynb
@@ -133,7 +133,356 @@
       "{\"type\":\"get_step\",\"step\":67}\n",
       "{\"type\":\"get_step\",\"step\":68}\n",
       "{\"type\":\"get_step\",\"step\":69}\n",
-      "{\"type\":\"get_step\",\"step\":70}\n"
+      "{\"type\":\"get_step\",\"step\":70}\n",
+      "{\"type\":\"get_step\",\"step\":71}\n",
+      "{\"type\":\"get_step\",\"step\":72}\n",
+      "{\"type\":\"get_step\",\"step\":73}\n",
+      "{\"type\":\"get_step\",\"step\":74}\n",
+      "{\"type\":\"get_step\",\"step\":75}\n",
+      "{\"type\":\"get_step\",\"step\":76}\n",
+      "{\"type\":\"get_step\",\"step\":77}\n",
+      "{\"type\":\"get_step\",\"step\":78}\n",
+      "{\"type\":\"get_step\",\"step\":79}\n",
+      "{\"type\":\"get_step\",\"step\":80}\n",
+      "{\"type\":\"get_step\",\"step\":81}\n",
+      "{\"type\":\"get_step\",\"step\":82}\n",
+      "{\"type\":\"get_step\",\"step\":83}\n",
+      "{\"type\":\"get_step\",\"step\":84}\n",
+      "{\"type\":\"get_step\",\"step\":85}\n",
+      "{\"type\":\"get_step\",\"step\":86}\n",
+      "{\"type\":\"get_step\",\"step\":87}\n",
+      "{\"type\":\"get_step\",\"step\":88}\n",
+      "{\"type\":\"get_step\",\"step\":89}\n",
+      "{\"type\":\"get_step\",\"step\":90}\n",
+      "{\"type\":\"get_step\",\"step\":91}\n",
+      "{\"type\":\"get_step\",\"step\":92}\n",
+      "{\"type\":\"get_step\",\"step\":93}\n",
+      "{\"type\":\"get_step\",\"step\":94}\n",
+      "{\"type\":\"get_step\",\"step\":95}\n",
+      "{\"type\":\"get_step\",\"step\":96}\n",
+      "{\"type\":\"get_step\",\"step\":97}\n",
+      "{\"type\":\"get_step\",\"step\":98}\n",
+      "{\"type\":\"get_step\",\"step\":99}\n",
+      "{\"type\":\"get_step\",\"step\":100}\n",
+      "{\"type\":\"get_step\",\"step\":101}\n",
+      "{\"type\":\"get_step\",\"step\":102}\n",
+      "{\"type\":\"get_step\",\"step\":103}\n",
+      "{\"type\":\"get_step\",\"step\":104}\n",
+      "{\"type\":\"get_step\",\"step\":105}\n",
+      "{\"type\":\"get_step\",\"step\":106}\n",
+      "{\"type\":\"get_step\",\"step\":107}\n",
+      "{\"type\":\"get_step\",\"step\":108}\n",
+      "{\"type\":\"get_step\",\"step\":109}\n",
+      "{\"type\":\"get_step\",\"step\":110}\n",
+      "{\"type\":\"get_step\",\"step\":111}\n",
+      "{\"type\":\"get_step\",\"step\":112}\n",
+      "{\"type\":\"get_step\",\"step\":113}\n",
+      "{\"type\":\"get_step\",\"step\":114}\n",
+      "{\"type\":\"get_step\",\"step\":115}\n",
+      "{\"type\":\"get_step\",\"step\":116}\n",
+      "{\"type\":\"get_step\",\"step\":117}\n",
+      "{\"type\":\"get_step\",\"step\":118}\n",
+      "{\"type\":\"get_step\",\"step\":119}\n",
+      "{\"type\":\"get_step\",\"step\":120}\n",
+      "{\"type\":\"get_step\",\"step\":121}\n",
+      "{\"type\":\"get_step\",\"step\":122}\n",
+      "{\"type\":\"get_step\",\"step\":123}\n",
+      "{\"type\":\"get_step\",\"step\":124}\n",
+      "{\"type\":\"get_step\",\"step\":125}\n",
+      "{\"type\":\"get_step\",\"step\":126}\n",
+      "{\"type\":\"get_step\",\"step\":127}\n",
+      "{\"type\":\"get_step\",\"step\":128}\n",
+      "{\"type\":\"get_step\",\"step\":129}\n",
+      "{\"type\":\"get_step\",\"step\":130}\n",
+      "{\"type\":\"get_step\",\"step\":131}\n",
+      "{\"type\":\"get_step\",\"step\":132}\n",
+      "{\"type\":\"get_step\",\"step\":133}\n",
+      "{\"type\":\"get_step\",\"step\":134}\n",
+      "{\"type\":\"get_step\",\"step\":135}\n",
+      "{\"type\":\"get_step\",\"step\":136}\n",
+      "{\"type\":\"get_step\",\"step\":137}\n",
+      "{\"type\":\"get_step\",\"step\":138}\n",
+      "{\"type\":\"get_step\",\"step\":139}\n",
+      "{\"type\":\"get_step\",\"step\":140}\n",
+      "{\"type\":\"get_step\",\"step\":141}\n",
+      "{\"type\":\"get_step\",\"step\":142}\n",
+      "{\"type\":\"get_step\",\"step\":143}\n",
+      "{\"type\":\"get_step\",\"step\":144}\n",
+      "{\"type\":\"get_step\",\"step\":145}\n",
+      "{\"type\":\"get_step\",\"step\":146}\n",
+      "{\"type\":\"get_step\",\"step\":147}\n",
+      "{\"type\":\"get_step\",\"step\":148}\n",
+      "{\"type\":\"get_step\",\"step\":149}\n",
+      "{\"type\":\"get_step\",\"step\":150}\n",
+      "{\"type\":\"get_step\",\"step\":151}\n",
+      "{\"type\":\"get_step\",\"step\":152}\n",
+      "{\"type\":\"get_step\",\"step\":153}\n",
+      "{\"type\":\"get_step\",\"step\":154}\n",
+      "{\"type\":\"get_step\",\"step\":155}\n",
+      "{\"type\":\"get_step\",\"step\":156}\n",
+      "{\"type\":\"get_step\",\"step\":157}\n",
+      "{\"type\":\"get_step\",\"step\":158}\n",
+      "{\"type\":\"get_step\",\"step\":159}\n",
+      "{\"type\":\"get_step\",\"step\":160}\n",
+      "{\"type\":\"get_step\",\"step\":161}\n",
+      "{\"type\":\"get_step\",\"step\":162}\n",
+      "{\"type\":\"get_step\",\"step\":163}\n",
+      "{\"type\":\"get_step\",\"step\":164}\n",
+      "{\"type\":\"get_step\",\"step\":165}\n",
+      "{\"type\":\"get_step\",\"step\":166}\n",
+      "{\"type\":\"get_step\",\"step\":167}\n",
+      "{\"type\":\"get_step\",\"step\":168}\n",
+      "{\"type\":\"get_step\",\"step\":169}\n",
+      "{\"type\":\"get_step\",\"step\":170}\n",
+      "{\"type\":\"get_step\",\"step\":171}\n",
+      "{\"type\":\"get_step\",\"step\":172}\n",
+      "{\"type\":\"get_step\",\"step\":173}\n",
+      "{\"type\":\"get_step\",\"step\":174}\n",
+      "{\"type\":\"get_step\",\"step\":175}\n",
+      "{\"type\":\"get_step\",\"step\":176}\n",
+      "{\"type\":\"get_step\",\"step\":177}\n",
+      "{\"type\":\"get_step\",\"step\":178}\n",
+      "{\"type\":\"get_step\",\"step\":179}\n",
+      "{\"type\":\"get_step\",\"step\":180}\n",
+      "{\"type\":\"get_step\",\"step\":181}\n",
+      "{\"type\":\"get_step\",\"step\":182}\n",
+      "{\"type\":\"get_step\",\"step\":183}\n",
+      "{\"type\":\"get_step\",\"step\":184}\n",
+      "{\"type\":\"get_step\",\"step\":185}\n",
+      "{\"type\":\"get_step\",\"step\":186}\n",
+      "{\"type\":\"get_step\",\"step\":187}\n",
+      "{\"type\":\"get_step\",\"step\":188}\n",
+      "{\"type\":\"get_step\",\"step\":189}\n",
+      "{\"type\":\"get_step\",\"step\":190}\n",
+      "{\"type\":\"get_step\",\"step\":191}\n",
+      "{\"type\":\"get_step\",\"step\":192}\n",
+      "{\"type\":\"get_step\",\"step\":193}\n",
+      "{\"type\":\"get_step\",\"step\":194}\n",
+      "{\"type\":\"get_step\",\"step\":195}\n",
+      "{\"type\":\"get_step\",\"step\":196}\n",
+      "{\"type\":\"get_step\",\"step\":197}\n",
+      "{\"type\":\"get_step\",\"step\":198}\n",
+      "{\"type\":\"get_step\",\"step\":199}\n",
+      "{\"type\":\"get_step\",\"step\":200}\n",
+      "{\"type\":\"get_step\",\"step\":201}\n",
+      "{\"type\":\"get_step\",\"step\":202}\n",
+      "{\"type\":\"get_step\",\"step\":203}\n",
+      "{\"type\":\"get_step\",\"step\":204}\n",
+      "{\"type\":\"get_step\",\"step\":205}\n",
+      "{\"type\":\"get_step\",\"step\":206}\n",
+      "{\"type\":\"get_step\",\"step\":207}\n",
+      "{\"type\":\"get_step\",\"step\":208}\n",
+      "{\"type\":\"get_step\",\"step\":209}\n",
+      "{\"type\":\"get_step\",\"step\":210}\n",
+      "{\"type\":\"get_step\",\"step\":211}\n",
+      "{\"type\":\"get_step\",\"step\":212}\n",
+      "{\"type\":\"get_step\",\"step\":213}\n",
+      "{\"type\":\"get_step\",\"step\":214}\n",
+      "{\"type\":\"get_step\",\"step\":215}\n",
+      "{\"type\":\"get_step\",\"step\":216}\n",
+      "{\"type\":\"get_step\",\"step\":217}\n",
+      "{\"type\":\"get_step\",\"step\":218}\n",
+      "{\"type\":\"get_step\",\"step\":219}\n",
+      "{\"type\":\"get_step\",\"step\":220}\n",
+      "{\"type\":\"get_step\",\"step\":221}\n",
+      "{\"type\":\"get_step\",\"step\":222}\n",
+      "{\"type\":\"get_step\",\"step\":223}\n",
+      "{\"type\":\"get_step\",\"step\":224}\n",
+      "{\"type\":\"get_step\",\"step\":225}\n",
+      "{\"type\":\"get_step\",\"step\":226}\n",
+      "{\"type\":\"get_step\",\"step\":227}\n",
+      "{\"type\":\"get_step\",\"step\":228}\n",
+      "{\"type\":\"get_step\",\"step\":229}\n",
+      "{\"type\":\"get_step\",\"step\":230}\n",
+      "{\"type\":\"get_step\",\"step\":231}\n",
+      "{\"type\":\"get_step\",\"step\":232}\n",
+      "{\"type\":\"get_step\",\"step\":233}\n",
+      "{\"type\":\"get_step\",\"step\":234}\n",
+      "{\"type\":\"get_step\",\"step\":235}\n",
+      "{\"type\":\"get_step\",\"step\":236}\n",
+      "{\"type\":\"get_step\",\"step\":237}\n",
+      "{\"type\":\"get_step\",\"step\":238}\n",
+      "{\"type\":\"get_step\",\"step\":239}\n",
+      "{\"type\":\"get_step\",\"step\":240}\n",
+      "{\"type\":\"get_step\",\"step\":241}\n",
+      "{\"type\":\"get_step\",\"step\":242}\n",
+      "{\"type\":\"get_step\",\"step\":243}\n",
+      "{\"type\":\"get_step\",\"step\":244}\n",
+      "{\"type\":\"get_step\",\"step\":245}\n",
+      "{\"type\":\"get_step\",\"step\":246}\n",
+      "{\"type\":\"get_step\",\"step\":247}\n",
+      "{\"type\":\"get_step\",\"step\":248}\n",
+      "{\"type\":\"get_step\",\"step\":249}\n",
+      "{\"type\":\"get_step\",\"step\":250}\n",
+      "{\"type\":\"get_step\",\"step\":251}\n",
+      "{\"type\":\"get_step\",\"step\":252}\n",
+      "{\"type\":\"get_step\",\"step\":253}\n",
+      "{\"type\":\"get_step\",\"step\":254}\n",
+      "{\"type\":\"get_step\",\"step\":255}\n",
+      "{\"type\":\"get_step\",\"step\":256}\n",
+      "{\"type\":\"get_step\",\"step\":257}\n",
+      "{\"type\":\"get_step\",\"step\":258}\n",
+      "{\"type\":\"get_step\",\"step\":259}\n",
+      "{\"type\":\"get_step\",\"step\":260}\n",
+      "{\"type\":\"get_step\",\"step\":261}\n",
+      "{\"type\":\"get_step\",\"step\":262}\n",
+      "{\"type\":\"get_step\",\"step\":263}\n",
+      "{\"type\":\"get_step\",\"step\":264}\n",
+      "{\"type\":\"get_step\",\"step\":265}\n",
+      "{\"type\":\"get_step\",\"step\":266}\n",
+      "{\"type\":\"get_step\",\"step\":267}\n",
+      "{\"type\":\"get_step\",\"step\":268}\n",
+      "{\"type\":\"get_step\",\"step\":269}\n",
+      "{\"type\":\"get_step\",\"step\":270}\n",
+      "{\"type\":\"get_step\",\"step\":271}\n",
+      "{\"type\":\"get_step\",\"step\":272}\n",
+      "{\"type\":\"get_step\",\"step\":273}\n",
+      "{\"type\":\"get_step\",\"step\":274}\n",
+      "{\"type\":\"get_step\",\"step\":275}\n",
+      "{\"type\":\"get_step\",\"step\":276}\n",
+      "{\"type\":\"get_step\",\"step\":277}\n",
+      "{\"type\":\"get_step\",\"step\":278}\n",
+      "{\"type\":\"get_step\",\"step\":279}\n",
+      "{\"type\":\"get_step\",\"step\":280}\n",
+      "{\"type\":\"get_step\",\"step\":281}\n",
+      "{\"type\":\"get_step\",\"step\":282}\n",
+      "{\"type\":\"get_step\",\"step\":283}\n",
+      "{\"type\":\"get_step\",\"step\":284}\n",
+      "{\"type\":\"get_step\",\"step\":285}\n",
+      "{\"type\":\"get_step\",\"step\":286}\n",
+      "{\"type\":\"get_step\",\"step\":287}\n",
+      "{\"type\":\"get_step\",\"step\":288}\n",
+      "{\"type\":\"get_step\",\"step\":289}\n",
+      "{\"type\":\"get_step\",\"step\":290}\n",
+      "{\"type\":\"get_step\",\"step\":291}\n",
+      "{\"type\":\"get_step\",\"step\":292}\n",
+      "{\"type\":\"get_step\",\"step\":293}\n",
+      "{\"type\":\"get_step\",\"step\":294}\n",
+      "{\"type\":\"get_step\",\"step\":295}\n",
+      "{\"type\":\"get_step\",\"step\":296}\n",
+      "{\"type\":\"get_step\",\"step\":297}\n",
+      "{\"type\":\"get_step\",\"step\":298}\n",
+      "{\"type\":\"get_step\",\"step\":299}\n",
+      "{\"type\":\"get_step\",\"step\":300}\n",
+      "{\"type\":\"get_step\",\"step\":301}\n",
+      "{\"type\":\"get_step\",\"step\":302}\n",
+      "{\"type\":\"get_step\",\"step\":303}\n",
+      "{\"type\":\"get_step\",\"step\":304}\n",
+      "{\"type\":\"get_step\",\"step\":305}\n",
+      "{\"type\":\"get_step\",\"step\":306}\n",
+      "{\"type\":\"get_step\",\"step\":307}\n",
+      "{\"type\":\"get_step\",\"step\":308}\n",
+      "{\"type\":\"get_step\",\"step\":309}\n",
+      "{\"type\":\"get_step\",\"step\":310}\n",
+      "{\"type\":\"get_step\",\"step\":311}\n",
+      "{\"type\":\"get_step\",\"step\":312}\n",
+      "{\"type\":\"get_step\",\"step\":313}\n",
+      "{\"type\":\"get_step\",\"step\":314}\n",
+      "{\"type\":\"get_step\",\"step\":315}\n",
+      "{\"type\":\"get_step\",\"step\":316}\n",
+      "{\"type\":\"get_step\",\"step\":317}\n",
+      "{\"type\":\"get_step\",\"step\":318}\n",
+      "{\"type\":\"get_step\",\"step\":319}\n",
+      "{\"type\":\"get_step\",\"step\":320}\n",
+      "{\"type\":\"get_step\",\"step\":321}\n",
+      "{\"type\":\"get_step\",\"step\":322}\n",
+      "{\"type\":\"get_step\",\"step\":323}\n",
+      "{\"type\":\"get_step\",\"step\":324}\n",
+      "{\"type\":\"get_step\",\"step\":325}\n",
+      "{\"type\":\"get_step\",\"step\":326}\n",
+      "{\"type\":\"get_step\",\"step\":327}\n",
+      "{\"type\":\"get_step\",\"step\":328}\n",
+      "{\"type\":\"get_step\",\"step\":329}\n",
+      "{\"type\":\"get_step\",\"step\":330}\n",
+      "{\"type\":\"get_step\",\"step\":331}\n",
+      "{\"type\":\"get_step\",\"step\":332}\n",
+      "{\"type\":\"get_step\",\"step\":333}\n",
+      "{\"type\":\"get_step\",\"step\":334}\n",
+      "{\"type\":\"get_step\",\"step\":335}\n",
+      "{\"type\":\"get_step\",\"step\":336}\n",
+      "{\"type\":\"get_step\",\"step\":337}\n",
+      "{\"type\":\"get_step\",\"step\":338}\n",
+      "{\"type\":\"get_step\",\"step\":339}\n",
+      "{\"type\":\"get_step\",\"step\":340}\n",
+      "{\"type\":\"get_step\",\"step\":341}\n",
+      "{\"type\":\"get_step\",\"step\":342}\n",
+      "{\"type\":\"get_step\",\"step\":343}\n",
+      "{\"type\":\"get_step\",\"step\":344}\n",
+      "{\"type\":\"get_step\",\"step\":345}\n",
+      "{\"type\":\"get_step\",\"step\":346}\n",
+      "{\"type\":\"get_step\",\"step\":347}\n",
+      "{\"type\":\"get_step\",\"step\":348}\n",
+      "{\"type\":\"get_step\",\"step\":349}\n",
+      "{\"type\":\"get_step\",\"step\":350}\n",
+      "{\"type\":\"get_step\",\"step\":351}\n",
+      "{\"type\":\"get_step\",\"step\":352}\n",
+      "{\"type\":\"get_step\",\"step\":353}\n",
+      "{\"type\":\"get_step\",\"step\":354}\n",
+      "{\"type\":\"get_step\",\"step\":355}\n",
+      "{\"type\":\"get_step\",\"step\":356}\n",
+      "{\"type\":\"get_step\",\"step\":357}\n",
+      "{\"type\":\"get_step\",\"step\":358}\n",
+      "{\"type\":\"get_step\",\"step\":359}\n",
+      "{\"type\":\"get_step\",\"step\":360}\n",
+      "{\"type\":\"get_step\",\"step\":361}\n",
+      "{\"type\":\"get_step\",\"step\":362}\n",
+      "{\"type\":\"get_step\",\"step\":363}\n",
+      "{\"type\":\"get_step\",\"step\":364}\n",
+      "{\"type\":\"get_step\",\"step\":365}\n",
+      "{\"type\":\"get_step\",\"step\":366}\n",
+      "{\"type\":\"get_step\",\"step\":367}\n",
+      "{\"type\":\"get_step\",\"step\":368}\n",
+      "{\"type\":\"get_step\",\"step\":369}\n",
+      "{\"type\":\"get_step\",\"step\":370}\n",
+      "{\"type\":\"get_step\",\"step\":371}\n",
+      "{\"type\":\"get_step\",\"step\":372}\n",
+      "{\"type\":\"get_step\",\"step\":373}\n",
+      "{\"type\":\"get_step\",\"step\":374}\n",
+      "{\"type\":\"get_step\",\"step\":375}\n",
+      "{\"type\":\"get_step\",\"step\":376}\n",
+      "{\"type\":\"get_step\",\"step\":377}\n",
+      "{\"type\":\"get_step\",\"step\":378}\n",
+      "{\"type\":\"get_step\",\"step\":379}\n",
+      "{\"type\":\"get_step\",\"step\":380}\n",
+      "{\"type\":\"get_step\",\"step\":381}\n",
+      "{\"type\":\"get_step\",\"step\":382}\n",
+      "{\"type\":\"get_step\",\"step\":383}\n",
+      "{\"type\":\"get_step\",\"step\":384}\n",
+      "{\"type\":\"get_step\",\"step\":385}\n",
+      "{\"type\":\"get_step\",\"step\":386}\n",
+      "{\"type\":\"get_step\",\"step\":387}\n",
+      "{\"type\":\"get_step\",\"step\":388}\n",
+      "{\"type\":\"get_step\",\"step\":389}\n",
+      "{\"type\":\"get_step\",\"step\":390}\n",
+      "{\"type\":\"get_step\",\"step\":391}\n",
+      "{\"type\":\"get_step\",\"step\":392}\n",
+      "{\"type\":\"get_step\",\"step\":393}\n",
+      "{\"type\":\"get_step\",\"step\":394}\n",
+      "{\"type\":\"get_step\",\"step\":395}\n",
+      "{\"type\":\"get_step\",\"step\":396}\n",
+      "{\"type\":\"get_step\",\"step\":397}\n",
+      "{\"type\":\"get_step\",\"step\":398}\n",
+      "{\"type\":\"get_step\",\"step\":399}\n",
+      "{\"type\":\"get_step\",\"step\":400}\n",
+      "{\"type\":\"get_step\",\"step\":401}\n",
+      "{\"type\":\"get_step\",\"step\":402}\n",
+      "{\"type\":\"get_step\",\"step\":403}\n",
+      "{\"type\":\"get_step\",\"step\":404}\n",
+      "{\"type\":\"get_step\",\"step\":405}\n",
+      "{\"type\":\"get_step\",\"step\":406}\n",
+      "{\"type\":\"get_step\",\"step\":407}\n",
+      "{\"type\":\"get_step\",\"step\":408}\n",
+      "{\"type\":\"get_step\",\"step\":409}\n",
+      "{\"type\":\"get_step\",\"step\":410}\n",
+      "{\"type\":\"get_step\",\"step\":411}\n",
+      "{\"type\":\"get_step\",\"step\":412}\n",
+      "{\"type\":\"get_step\",\"step\":413}\n",
+      "{\"type\":\"get_step\",\"step\":414}\n",
+      "{\"type\":\"get_step\",\"step\":415}\n",
+      "{\"type\":\"get_step\",\"step\":416}\n",
+      "{\"type\":\"get_step\",\"step\":417}\n",
+      "{\"type\":\"get_step\",\"step\":418}\n",
+      "{\"type\":\"get_step\",\"step\":419}\n"
      ]
     }
    ],
